--- a/index.html
+++ b/index.html
@@ -124,73 +124,73 @@
                 </a>
                 <script> (function() { var qs,js,q,s,d=document, gi=d.getElementById, ce=d.createElement, gt=d.getElementsByTagName, id="typef_orm_share", b="https://embed.typeform.com/"; if(!gi.call(d,id)){ js=ce.call(d,"script"); js.id=id; js.src=b+"embed.js"; q=gt.call(d,"script")[0]; q.parentNode.insertBefore(js,q) } })()
                 </script>
+              </div>
             </div>
           </div>
         </div>
       </div>
-    </div>
-  </header>
+    </header>
 
-  <div class="page-header">
-    <div class="container ">
-      <div class="row">
-        <div class="col-md-8 mx-auto text-center">
-          <h2 class="display-2" style="font-family: 'CeraGR-Medium' !important; font-size: 2.5rem !important; font-weight: 600 !important;">Acing the IELTS exam, is your key to unlocking opportunities abroad.</h2>
+    <div class="page-header">
+      <div class="container ">
+        <div class="row">
+          <div class="col-md-8 mx-auto text-center">
+            <h2 class="display-2" style="font-family: 'CeraGR-Medium' !important; font-size: 2.5rem !important; font-weight: 600 !important;">Acing the IELTS exam, is your key to unlocking opportunities abroad.</h2>
+          </div>
+        </div>
+        <div class="row">
+          <div class="floating-box bg-default">
+            <div class="box text-center">
+              <div class="icon icon-shape bg-success icon-xl rounded-circle text-white">
+                <i class="ni ni-spaceship"></i>
+              </div>
+            </div>
+            <h2 class="lead text-white p-5" style="font-family: 'CeraGR-Medium' !important; ">If English is your second language, think of acing the IELTS exam as getting your international passport. The exam is recognized by 9K+ organisations worldwide, including schools, universities, employers, and immigration authorities. Whether you are an international student or job seeker, a high score and confidence speaking will dramatically improve your opportunity landscape.</h2>
+          </div>
         </div>
       </div>
-      <div class="row">
-        <div class="floating-box bg-default">
-          <div class="box text-center">
-            <div class="icon icon-shape bg-success icon-xl rounded-circle text-white">
-              <i class="ni ni-spaceship"></i>
+    </div>
+
+    <div class=" features-6">
+      <div class="container">
+        <div class="row align-items-center">
+          <div class="col-lg-6">
+            <div class="info info-horizontal info-hover-primary">
+              <div class="icon icon-shape icon-shape-info rounded-circle text-white">
+                <i class="ni ni-planet text-info"></i>
+              </div>
+              <div class="description pl-4">
+                <h5 class="title" style="font-family: 'CeraGR-Medium';">Study from Anywhere</h5>
+                <p style="font-family: 'CeraGR-Regular';">Our 9-Week Immersive Oral English Bootcamp is a fully remote program using GOJI virtual classroom software, giving students 9 hours of live teaching per week.</p>
+                <a href="https://form.typeform.com/to/kmE4iegW" target="_blank" class="text-info" style="font-family: 'CeraGR-Bold';">Let's Go</a>
+              </div>
+            </div>
+            <div class="info info-horizontal info-hover-primary">
+              <div class="icon icon-shape icon-shape-info rounded-circle text-white">
+                <i class="ni ni-satisfied text-info"></i>
+              </div>
+              <div class="description pl-4">
+                <h5 class="title" style="font-family: 'CeraGR-Medium';">Small Classes</h5>
+                <p style="font-family: 'CeraGR-Regular';">Get plenty of speaking time with small classes of four, to ensure that the experience is immersive and that everyone is building confidence communicating in English.</p>
+                <a href="https://form.typeform.com/to/kmE4iegW" target="_blank" class="text-info" style="font-family: 'CeraGR-Bold';">Let's Go</a>
+              </div>
             </div>
           </div>
-          <h2 class="lead text-white p-5" style="font-family: 'CeraGR-Medium' !important; ">If English is your second language, think of acing the IELTS exam as getting your international passport. The exam is recognized by 9K+ organisations worldwide, including schools, universities, employers, and immigration authorities. Whether you are an international student or job seeker, a high score and confidence speaking will dramatically improve your opportunity landscape.</h2>
+          <div class="col-lg-6 col-10 mx-md-auto">
+            <img class="ml-lg-5" src="assets/img/ill/ill.png" width="100%">
+          </div>
         </div>
       </div>
     </div>
-  </div>
 
-  <div class=" features-6">
+    <br /><br />
+    <!-- <div class="section features-3 my-5" style="background-image: url('./assets/img/ill/p31.svg')">
     <div class="container">
-      <div class="row align-items-center">
-        <div class="col-lg-6">
-          <div class="info info-horizontal info-hover-primary">
-            <div class="icon icon-shape icon-shape-info rounded-circle text-white">
-              <i class="ni ni-planet text-info"></i>
-            </div>
-            <div class="description pl-4">
-              <h5 class="title" style="font-family: 'CeraGR-Medium';">Study from Anywhere</h5>
-              <p style="font-family: 'CeraGR-Regular';">Our 9-Week Immersive Oral English Bootcamp is a fully remote program using GOJI virtual classroom software, giving students 9 hours of live teaching per week.</p>
-              <a href="https://form.typeform.com/to/kmE4iegW" target="_blank" class="text-info" style="font-family: 'CeraGR-Bold';">Let's Go</a>
-            </div>
-          </div>
-          <div class="info info-horizontal info-hover-primary">
-            <div class="icon icon-shape icon-shape-info rounded-circle text-white">
-              <i class="ni ni-satisfied text-info"></i>
-            </div>
-            <div class="description pl-4">
-              <h5 class="title" style="font-family: 'CeraGR-Medium';">Small Classes</h5>
-              <p style="font-family: 'CeraGR-Regular';">Get plenty of speaking time with small classes of four, to ensure that the experience is immersive and that everyone is building confidence communicating in English.</p>
-              <a href="https://form.typeform.com/to/kmE4iegW" target="_blank" class="text-info" style="font-family: 'CeraGR-Bold';">Let's Go</a>
-            </div>
-          </div>
-        </div>
-        <div class="col-lg-6 col-10 mx-md-auto">
-          <img class="ml-lg-5" src="assets/img/ill/ill.png" width="100%">
-        </div>
-      </div>
-    </div>
+    <div class="row text-center justify-content-center">
+    <div class="col-lg-8">
+    <h3 class="display-3 text-white" style="font-family: 'CeraGR-Regular';">The GOJI IELTS Bootcamp is<span class="text-success" style="color: #5DA5AA !important; font-family: 'CeraGR-Medium';"> backed by awesome partners</span></h3>
+    <p class="lead text-white"></p>
   </div>
-
-  <br /><br />
-  <!-- <div class="section features-3 my-5" style="background-image: url('./assets/img/ill/p31.svg')">
-  <div class="container">
-  <div class="row text-center justify-content-center">
-  <div class="col-lg-8">
-  <h3 class="display-3 text-white" style="font-family: 'CeraGR-Regular';">The GOJI IELTS Bootcamp is<span class="text-success" style="color: #5DA5AA !important; font-family: 'CeraGR-Medium';"> backed by awesome partners</span></h3>
-  <p class="lead text-white"></p>
-</div>
 </div>
 <div class="row row-grid mt-5">
 <div class="col-lg-6">
@@ -263,7 +263,7 @@
             </a>
           </li>
         </ul>
-        <p class="lead mt-0"style="font-family: 'CeraGR-Regular';">Register <strong>before October 5. </strong></p>
+        <p class="lead mt-0"style="font-family: 'CeraGR-Regular';">Register <strong>by October 5. </strong></p>
       </div>
       <div class="col-lg-8 col-md-8 ml-auto mr-auto">
         <div class="tab-content tab-space">
@@ -480,81 +480,81 @@
 
 
               <!-- <div class="card">
-                <div class="card-header" id="headingFifth">
-                  <h5 class="mb-0">
-                    <button class="btn btn-link w-100 text-primary text-left" type="button" data-toggle="collapse" data-target="#collapseFifth" aria-controls="collapseFifth">
-                      Where do I find the shipping details?
-                      <i class="ni ni-bold-down float-right pt-1"></i>
-                    </button>
-                  </h5>
-                </div>
-                <div id="collapseFifth" class="collapse" aria-labelledby="headingFifth" data-parent="#accordionExample">
-                  <div class="card-body opacity-8">
-                    Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad squid. 3 wolf moon officia aute, non cupidatat skateboard dolor brunch. Food truck quinoa nesciunt laborum eiusmod. Brunch 3 wolf moon tempor, sunt aliqua put a bird on it squid single-origin coffee nulla assumenda shoreditch et. Nihil anim keffiyeh helvetica, craft beer labore wes anderson cred nesciunt sapiente ea proident. Ad vegan excepteur butcher vice lomo. Leggings occaecat craft beer farm-to-table, raw denim aesthetic synth nesciunt you probably haven't heard of them accusamus labore sustainable VHS.
-                  </div>
-                </div>
-              </div> -->
-            </div>
-          </div>
+              <div class="card-header" id="headingFifth">
+              <h5 class="mb-0">
+              <button class="btn btn-link w-100 text-primary text-left" type="button" data-toggle="collapse" data-target="#collapseFifth" aria-controls="collapseFifth">
+              Where do I find the shipping details?
+              <i class="ni ni-bold-down float-right pt-1"></i>
+            </button>
+          </h5>
         </div>
+        <div id="collapseFifth" class="collapse" aria-labelledby="headingFifth" data-parent="#accordionExample">
+        <div class="card-body opacity-8">
+        Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad squid. 3 wolf moon officia aute, non cupidatat skateboard dolor brunch. Food truck quinoa nesciunt laborum eiusmod. Brunch 3 wolf moon tempor, sunt aliqua put a bird on it squid single-origin coffee nulla assumenda shoreditch et. Nihil anim keffiyeh helvetica, craft beer labore wes anderson cred nesciunt sapiente ea proident. Ad vegan excepteur butcher vice lomo. Leggings occaecat craft beer farm-to-table, raw denim aesthetic synth nesciunt you probably haven't heard of them accusamus labore sustainable VHS.
       </div>
+    </div>
+  </div> -->
+</div>
+</div>
+</div>
+</div>
+</div>
+</div>
+<br><br>
+<footer class="footer">
+  <br>
+  <br>
+  <br>
+  <div class="container">
+    <div class="row row-grid align-items-center mb-5">
+      <div class="col-lg-6">
+        <h3 class="text-primary font-weight-light mb-2" style="font-family: 'CeraGR-Medium'; color: #5DA5AA !important;">Stay in Touch!</h3>
+        <h4 class="mb-0 font-weight-light" style="font-family: 'CeraGR-Light';">Engage with us on any of these platforms.</h4>
+      </div>
+      <div class="col-lg-6 text-lg-center btn-wrapper">
+        <!-- <a href="https://www.instagram.com/goji_net/" target="_blank" rel="nofollow" class="btn btn-icon-only btn-instagram rounded-circle" data-toggle="tooltip" data-original-title="Follow us">
+        <span class="btn-inner--icon"><i class="fa fa-instagram"></i></span>
+      </a> -->
+      <a href="https://www.meetup.com/pro/goji" target="_blank" rel="nofollow" class="btn btn-icon-only btn-meetup rounded-circle" data-toggle="tooltip" data-original-title="Join us on Meetup">
+        <span class="btn-inner--icon"><i class="fa fa-meetup"></i></span>
+      </a>
+      <a href="https://www.linkedin.com/company/gojinet" target="_blank" rel="nofollow" class="btn btn-icon-only btn-meetup-3 rounded-circle" data-toggle="tooltip" data-original-title="Follow us on LinkedIn">
+        <span class="btn-inner--icon"><i class="fa fa-linkedin"></i></span>
+      </a>
+      <a href="https://www.instagram.com/goji_net" target="_blank" rel="nofollow" class="btn btn-icon-only btn-meetup-2 rounded-circle" data-toggle="tooltip" data-original-title="Follow us on Instagram">
+        <span class="btn-inner--icon"><i class="fa fa-instagram"></i></span>
+      </a>
+      <a href="https://www.facebook.com/GOJI-106671664518967" target="_blank" rel="nofollow" class="btn btn-icon-only btn-meetup-4 rounded-circle" data-toggle="tooltip" data-original-title="Follow us on Facebook">
+        <span class="btn-inner--icon"><i class="fa fa-facebook"></i></span>
+      </a>
     </div>
   </div>
-  <br><br>
-  <footer class="footer">
-    <br>
-    <br>
-    <br>
-    <div class="container">
-      <div class="row row-grid align-items-center mb-5">
-        <div class="col-lg-6">
-          <h3 class="text-primary font-weight-light mb-2" style="font-family: 'CeraGR-Medium'; color: #5DA5AA !important;">Stay in Touch!</h3>
-          <h4 class="mb-0 font-weight-light" style="font-family: 'CeraGR-Light';">Engage with us on any of these platforms.</h4>
-        </div>
-        <div class="col-lg-6 text-lg-center btn-wrapper">
-          <!-- <a href="https://www.instagram.com/goji_net/" target="_blank" rel="nofollow" class="btn btn-icon-only btn-instagram rounded-circle" data-toggle="tooltip" data-original-title="Follow us">
-          <span class="btn-inner--icon"><i class="fa fa-instagram"></i></span>
-        </a> -->
-        <a href="https://www.meetup.com/pro/goji" target="_blank" rel="nofollow" class="btn btn-icon-only btn-meetup rounded-circle" data-toggle="tooltip" data-original-title="Join us on Meetup">
-          <span class="btn-inner--icon"><i class="fa fa-meetup"></i></span>
-        </a>
-        <a href="https://www.linkedin.com/company/gojinet" target="_blank" rel="nofollow" class="btn btn-icon-only btn-meetup-3 rounded-circle" data-toggle="tooltip" data-original-title="Follow us on LinkedIn">
-          <span class="btn-inner--icon"><i class="fa fa-linkedin"></i></span>
-        </a>
-        <a href="https://www.instagram.com/goji_net" target="_blank" rel="nofollow" class="btn btn-icon-only btn-meetup-2 rounded-circle" data-toggle="tooltip" data-original-title="Follow us on Instagram">
-          <span class="btn-inner--icon"><i class="fa fa-instagram"></i></span>
-        </a>
-        <a href="https://www.facebook.com/GOJI-106671664518967" target="_blank" rel="nofollow" class="btn btn-icon-only btn-meetup-4 rounded-circle" data-toggle="tooltip" data-original-title="Follow us on Facebook">
-          <span class="btn-inner--icon"><i class="fa fa-facebook"></i></span>
-        </a>
+  <br>
+  <hr>
+  <br>
+  <div class="row align-items-center justify-content-md-between">
+    <div class="col-md-3">
+      <div class="copyright" style="font-family: 'CeraGR-Bold';">
+        <a href="https://www.gojinet.com/" target="_blank">GOJI</a> &copy; 2020
       </div>
-    </div>
-    <br>
-    <hr>
-    <br>
-    <div class="row align-items-center justify-content-md-between">
-      <div class="col-md-3">
-        <div class="copyright" style="font-family: 'CeraGR-Bold';">
-          <a href="https://www.gojinet.com/" target="_blank">GOJI</a> &copy; 2020
-        </div>
-        <br>
+      <br>
 
-        <div class="copyright" style="font-family: 'CeraGR-Bold';">
-          <a href="https://www.gojinet.com/pages/goji-privacy-policy" target="_blank"  target="_blank" style="font-family: 'CeraGR-Bold' !important; color: RGBA(84, 96, 124, 1.00) !important;">Privacy Policy</a>
-        </div>
-        <div class="copyright" style="font-family: 'CeraGR-Bold';">
-          <a href="https://www.gojinet.com/pages/goji-terms-conditions" target="_blank" target="_blank" style="font-family: 'CeraGR-Bold' !important; color: RGBA(84, 96, 124, 1.00) !important;">Terms and Conditions</a>
-        </div>
-        <div class="copyright" style="font-family: 'CeraGR-Bold';">
-          <a href="#" target="_blank" target="_blank" style="font-family: 'CeraGR-Bold' !important; color: RGBA(84, 96, 124, 1.00) !important;">Contact</a>
-        </div>
-
+      <div class="copyright" style="font-family: 'CeraGR-Bold';">
+        <a href="https://www.gojinet.com/pages/goji-privacy-policy" target="_blank"  target="_blank" style="font-family: 'CeraGR-Bold' !important; color: RGBA(84, 96, 124, 1.00) !important;">Privacy Policy</a>
+      </div>
+      <div class="copyright" style="font-family: 'CeraGR-Bold';">
+        <a href="https://www.gojinet.com/pages/goji-terms-conditions" target="_blank" target="_blank" style="font-family: 'CeraGR-Bold' !important; color: RGBA(84, 96, 124, 1.00) !important;">Terms and Conditions</a>
+      </div>
+      <div class="copyright" style="font-family: 'CeraGR-Bold';">
+        <a href="#" target="_blank" target="_blank" style="font-family: 'CeraGR-Bold' !important; color: RGBA(84, 96, 124, 1.00) !important;">Contact</a>
       </div>
 
     </div>
-    <br>
 
   </div>
+  <br>
+
+</div>
 </footer>
 
 </div>
@@ -563,26 +563,17 @@
 <script src="assets/js/core/popper.min.js" type="text/javascript"></script>
 <script src="assets/js/core/bootstrap.min.js" type="text/javascript"></script>
 <script src="assets/js/plugins/perfect-scrollbar.jquery.min.js"></script>
-<!--  Plugin for Switches, full documentation here: http://www.jque.re/plugins/version3/bootstrap.switch/ -->
-<script src="assets/js/plugins/bootstrap-switch.js"></script>
+
 <!--  Plugin for the Sliders, full documentation here: http://refreshless.com/nouislider/ -->
 <script src="assets/js/plugins/nouislider.min.js" type="text/javascript"></script>
 <!--  Plugin for the Carousel, full documentation here: http://jedrzejchalubek.com/ -->
 <script src="assets/js/plugins/glide.js" type="text/javascript"></script>
 <!--  Plugin for the DatePicker, full documentation here: https://flatpickr.js.org/ -->
 <script src="assets/js/plugins/moment.min.js"></script>
-<!--	Plugin for Select, full documentation here: https://joshuajohnson.co.uk/Choices/ -->
-<script src="assets/js/plugins/choices.min.js" type="text/javascript"></script>
-<!--  Plugin for the DateTimePicker, full documentation here: https://flatpickr.js.org/ -->
-<script src="assets/js/plugins/datetimepicker.js" type="text/javascript"></script>
-<!-- Plugin for Fileupload, full documentation here: http://www.jasny.net/bootstrap/javascript/#fileinput -->
-<script src="assets/js/plugins/jasny-bootstrap.min.js"></script>
-<!-- Plugin for Headrom, full documentation here: https://wicky.nillia.ms/headroom.js/ -->
-<script src="assets/js/plugins/headroom.min.js"></script>
-<!-- Control Center for Argon UI Kit: parallax effects, scripts for the example pages etc -->
+
 
 <script src="assets/js/argon-design-system.min.js?v=1.0.2" type="text/javascript"></script>
-<script src="https://cdn.trackjs.com/agent/v3/latest/t.js"></script>
+
 
 </body>
 
