--- a/index.html
+++ b/index.html
@@ -394,7 +394,7 @@
                   </div>
                   <div class="col-md-5 p-5 ml-auto">
                     <div class="p-3">
-                      <img class="img-fluid rounded shadow transform-perspective-right" src="./assets/img/students/GOJI-Students-2.png" alt="First slide">
+                      <img class="img-fluid rounded shadow transform-perspective-right" src="./assets/img/students/GOJI-Students-1.webp" alt="First slide">
                     </div>
                   </div>
                 </div>
@@ -413,7 +413,7 @@
                   </div>
                   <div class="col-md-5 p-5 ml-auto">
                     <div class="p-3">
-                      <img class="img-fluid rounded shadow transform-perspective-right" src="./assets/img/students/GOJI-Students-1.png" alt="First slide">
+                      <img class="img-fluid rounded shadow transform-perspective-right" src="./assets/img/students/GOJI-Students-2.webp" alt="First slide">
                     </div>
                   </div>
                 </div>
