--- a/index.html
+++ b/index.html
@@ -177,7 +177,7 @@
             </div>
           </div>
           <div class="col-lg-6 col-10 mx-md-auto">
-            <img class="ml-lg-5" src="assets/img/ill/ill.png" width="100%">
+            <img class="ml-lg-5" src="assets/img/ill/ill.webp" width="100%">
           </div>
         </div>
       </div>
@@ -372,7 +372,7 @@
 
   <div class="cd-section" id="testimonials">
 
-    <div class="testimonials-1" style="background-image: url('./assets/img/ill/testimonial_bg.svg');">
+    <div class="testimonials-1" style="background-image: url('./assets/img/ill/testimonials.webp');">
       <div class="container">
         <div class="row">
           <div class="col-md-6 ml-auto mr-auto text-center">
