--- a/index.html
+++ b/index.html
@@ -11,6 +11,15 @@
   <meta property="og:image" content="https://res.cloudinary.com/gojinet-com/image/upload/v1600012887/GOJI-IELTS-Program_puaywc.png"/>
   <meta property="og:url" content="https://res.cloudinary.com/gojinet-com/image/upload/v1600012887/GOJI-IELTS-Program_puaywc.png"/>
 
+  <!-- Global site tag (gtag.js) - Google Analytics -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=UA-162110701-1"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+
+    gtag('config', 'UA-162110701-1');
+  </script>
 
 
 
