--- a/index.html
+++ b/index.html
@@ -11,22 +11,27 @@
   <meta property="og:image" content="https://res.cloudinary.com/gojinet-com/image/upload/v1600012887/GOJI-IELTS-Program_puaywc.png"/>
   <meta property="og:url" content="https://res.cloudinary.com/gojinet-com/image/upload/v1600012887/GOJI-IELTS-Program_puaywc.png"/>
 
-  <!-- Global site tag (gtag.js) - Google Ads: 536713294 -->
-  <script async src="https://www.googletagmanager.com/gtag/js?id=AW-536713294"></script>
+  <!-- Global site tag (gtag.js) - Google Ads: 585740047 -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=AW-585740047"></script>
   <script>
     window.dataLayer = window.dataLayer || [];
     function gtag(){dataLayer.push(arguments);}
     gtag('js', new Date());
 
-    gtag('config', 'AW-536713294');
+    gtag('config', 'AW-585740047');
   </script>
 
-  <!-- Event snippet for Website lead conversion page -->
   <script>
-    gtag('event', 'conversion', {'send_to': 'AW-536713294/3eioCMKj3eIBEM6w9v8B'});
+    gtag('event', 'page_view', {
+      'send_to': 'AW-585740047',
+      'value': 'replace with value',
+      'items': [{
+        'id': 'replace with value',
+        'location_id': 'replace with value',
+        'google_business_vertical': 'education'
+      }]
+    });
   </script>
-
-
 
   <!-- Global site tag (gtag.js) - Google Analytics -->
   <script async src="https://www.googletagmanager.com/gtag/js?id=UA-162110701-1"></script>
