--- a/index.html
+++ b/index.html
@@ -173,12 +173,21 @@
               <div class="icon icon-shape bg-success icon-xl rounded-circle text-white">
                 <i class="ni ni-spaceship"></i>
               </div>
+              <h2 class="lead  p-5" style="font-family: 'CeraGR-Regular' !important; ">If English is your second language, think of acing the IELTS exam as getting your international passport. The exam is recognized by nearly 10,000 organisations worldwide, including schools, universities, employers, and immigration authorities. Whether you are an international student or job seeker, a high score and confidence speaking will dramatically improve your opportunity landscape.</h2>
+              <a class="typeform-share button btn-icon hover-button" href="https://form.typeform.com/to/kmE4iegW" data-mode="popup" style="display:inline-block;text-decoration:none;background-color:#5DA5AA;color:white;cursor:pointer;font-family: 'CeraGR-Bold'; font-size: 22px; line-height:60px;text-align:center;margin:0;height:60px;padding:0px 40px;border-radius:5px;max-width:100%;white-space:nowrap;overflow:hidden;text-overflow:ellipsis;font-weight:bold;-webkit-font-smoothing:antialiased;-moz-osx-font-smoothing:grayscale;" target="_blank">Let's Go
+              </a>
+              <script> (function() { var qs,js,q,s,d=document, gi=d.getElementById, ce=d.createElement, gt=d.getElementsByTagName, id="typef_orm_share", b="https://embed.typeform.com/"; if(!gi.call(d,id)){ js=ce.call(d,"script"); js.id=id; js.src=b+"embed.js"; q=gt.call(d,"script")[0]; q.parentNode.insertBefore(js,q) } })()
+              </script>
+              <br>
+              <br>
             </div>
-            <h2 class="lead text-white p-5" style="font-family: 'CeraGR-Medium' !important; ">If English is your second language, think of acing the IELTS exam as getting your international passport. The exam is recognized by 9K+ organisations worldwide, including schools, universities, employers, and immigration authorities. Whether you are an international student or job seeker, a high score and confidence speaking will dramatically improve your opportunity landscape.</h2>
           </div>
         </div>
       </div>
     </div>
+    <br>
+    <br>
+
 
     <div class=" features-6">
       <div class="container">
@@ -292,7 +301,7 @@
             </a>
           </li>
         </ul>
-        <p class="lead mt-0"style="font-family: 'CeraGR-Regular';">Register <strong>by October 7. </strong></p>
+        <p class="lead mt-0"style="font-family: 'CeraGR-Regular';">Register <strong>by October 23. </strong></p>
       </div>
       <div class="col-lg-8 col-md-8 ml-auto mr-auto">
         <div class="tab-content tab-space">
@@ -495,7 +504,7 @@
                 <div class="card-header" id="headingTwo">
                   <h5 class="mb-0">
                     <button class="btn btn-link w-100 text-primary text-left collapsed" type="button" data-toggle="collapse" data-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
-                      Is the program designed by IELTS examiners?
+                      Is the program designed by IELTS teachers?
                       <i class="ni ni-bold-down float-right pt-1"></i>
                     </button>
                   </h5>
