--- a/sections.html
+++ b/sections.html
@@ -1,38 +1,63 @@
-<!--
-=========================================================
-* Argon Design System Pro - v1.0.2
-=========================================================
-
-* Product Page: https://www.creative-tim.com/product/argon-design-system-pro
-* Copyright 2020 Creative Tim (https://www.creative-tim.com)
-
-Coded by www.creative-tim.com
-
- =========================================================
-
-* The above copyright notice and this permission notice shall be included in all copies or substantial portions of the Software. -->
 <!DOCTYPE html>
 <html lang="en">
 
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-  <link rel="apple-touch-icon" sizes="76x76" href="./assets/img/apple-icon.png">
-  <link rel="icon" type="image/png" href="./assets/img/favicon.png">
+
+  <meta name="description" content="GOJI's IELTS and Oral English Bootcamp.">
+  <meta name="author" content="GOJI">
+
+  <meta property="og:image" content="https://res.cloudinary.com/gojinet-com/image/upload/v1600012887/GOJI-IELTS-Program_puaywc.png"/>
+  <meta property="og:url" content="https://res.cloudinary.com/gojinet-com/image/upload/v1600012887/GOJI-IELTS-Program_puaywc.png"/>
+
+  <!-- Global site tag (gtag.js) - Google Ads: 585740047 -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=AW-585740047"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+
+    gtag('config', 'AW-585740047');
+  </script>
+
+  <script>
+    gtag('event', 'page_view', {
+      'send_to': 'AW-585740047',
+      'value': 'replace with value',
+      'items': [{
+        'id': 'replace with value',
+        'location_id': 'replace with value',
+        'google_business_vertical': 'education'
+      }]
+    });
+  </script>
+
+  <!-- Global site tag (gtag.js) - Google Analytics -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=UA-162110701-1"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+
+    gtag('config', 'UA-162110701-1');
+  </script>
+
+
+  <link rel="icon" type="image/png" href="assets/img/favicon.png">
   <title>
-    Argon Design System Pro by Creative Tim
+    IELTS | GOJI
   </title>
-  <!--     Fonts and icons     -->
-  <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,600,700" rel="stylesheet">
-  <link href="https://use.fontawesome.com/releases/v5.0.6/css/all.css" rel="stylesheet">
+
+
   <!-- Nucleo Icons -->
-  <link href="./assets/css/nucleo-icons.css" rel="stylesheet" />
-  <link href="./assets/css/nucleo-svg.css" rel="stylesheet" />
+  <link href="assets/css/nucleo-icons.css" rel="stylesheet" />
+  <link href="assets/css/nucleo-svg.css" rel="stylesheet" />
   <!-- Font Awesome Icons -->
-  <link href="./assets/css/font-awesome.css" rel="stylesheet" />
-  <link href="./assets/css/nucleo-svg.css" rel="stylesheet" />
+  <link href="assets/css/font-awesome.css" rel="stylesheet" />
+
   <!-- CSS Files -->
-  <link href="./assets/css/argon-design-system.css?v=1.0.2" rel="stylesheet" />
+  <link href="assets/css/argon-design-system.css?v=1.0.2" rel="stylesheet" />
 </head>
 
 <body class="sections-page">
