--- a/index.html
+++ b/index.html
@@ -301,7 +301,7 @@
             </a>
           </li>
         </ul>
-        <p class="lead mt-0"style="font-family: 'CeraGR-Regular';">Register <strong>by October 23. </strong></p>
+        <p class="lead mt-0"style="font-family: 'CeraGR-Regular';">Register <strong>by January 9, 2021. </strong></p>
       </div>
       <div class="col-lg-8 col-md-8 ml-auto mr-auto">
         <div class="tab-content tab-space">
