--- a/index.html
+++ b/index.html
@@ -2,6 +2,9 @@
 <html lang="en">
 
 <head>
+  <title>
+    IELTS Training by GOJI
+  </title>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
@@ -23,9 +26,6 @@
 
 
   <link rel="icon" type="image/png" href="assets/img/favicon.png">
-  <title>
-    IELTS | GOJI
-  </title>
 
 
   <!-- Nucleo Icons -->
