acing the ielts exam

--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
             <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
               <a class="dropdown-item" href="https://www.ielts.org/" target="_blank">
                 <i class="ni ni-paper-diploma text-info"></i>
-                Acing the IELTS
+                Acing the IELTS Exam
               </a>
               <a class="dropdown-item" href="https://www.ielts.org/" target="_blank">
                 <i class="ni ni-world text-danger"></i>
